@@ -229,6 +229,11 @@ xsaveopt:
 Select XSAVEOPT instruction support.
 This option exists only if Bochs compiled with BX_CPU_LEVEL >= 6.
 
+avx:
+
+Select AVX instruction set support.
+This option exists only if Bochs compiled with --enable-avx option.
+
 1g_pages:
 
 Enable 1G page size support in long mode.
